fix: create getScrollbarWidth function in utils.js to replace manual calculations; fix centering issue in SolutionDetailsPage by adjusting vw container width

--- a/client/src/components/SolutionComponents/SolutionDetailsPage.css
+++ b/client/src/components/SolutionComponents/SolutionDetailsPage.css
@@ -5,7 +5,7 @@
     padding-bottom: 300px;
     left: 25vw;
     top: 0;
-    width: 50vw;
+    width: calc(50vw - 16px); /* Subtracting the average of various browser's scrollbar widths */
     z-index: 2;
     transition: width 0.4s ease-in-out, left 0.4s ease-in-out;
 }
@@ -21,7 +21,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     box-sizing: border-box;
-    width: 50vw;
+    width: calc(50vw - 16px); /* Subtracting the average of various browser's scrollbar widths */
 }
 
 .solution-details-container h2 {
